src/main/default/objects/Digital_River_Tax_Mapping__c/Digital_River_Tax_Mapping__c.object-meta.xml
<CustomObject>
    <description>It will Store Digital River Tax Group, Tax Type, Tax Code and Product Type information</description>
    <label>Digital River Tax Mapping</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>DR Tax Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital River Tax Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>