src/main/default/objects/Digital_River_Tax_Mapping__c/fields/DR_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>DR_Product_Type__c</fullName>
    <description>Indicates if the Product is Physical or Digital</description>
    <label>DR Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>