src/main/default/objects/Digital_River_Tax_Mapping__c/fields/DR_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>DR_Tax_Code__c</fullName>
    <description>Stores Tax Code</description>
    <label>DR Tax Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>