src/main/default/objects/Digital_River_Tax_Mapping__c/fields/DR_Tax_Group__c.field-meta.xml
<CustomField>
    <fullName>DR_Tax_Group__c</fullName>
    <description>Stores Tax Group</description>
    <label>DR Tax Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>