src/main/default/objects/Digital_River_Tax_Mapping__c/fields/DR_Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>DR_Tax_Type__c</fullName>
    <description>Stores Tax Type</description>
    <label>DR Tax Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>